--- a/style.scss
+++ b/style.scss
@@ -677,6 +677,7 @@ footer{
 @media (max-width: 481px) {
     html{
         font-size:45%;
+        overflow-x: hidden;
     }
     header{
         
