--- a/css/style.css
+++ b/css/style.css
@@ -907,6 +907,7 @@ footer p a {
 @media (max-width: 481px) {
   html {
     font-size: 45%;
+    overflow-x: hidden;
   }
   header nav {
     display: -webkit-box;
