--- a/css/style.css
+++ b/css/style.css
@@ -904,10 +904,9 @@ footer p a {
   color: var(--secondary-color);
 }
 
-@media (max-width: 481px) {
+@media only screen and (max-width: 481px) {
   html {
     font-size: 45%;
-    overflow-x: hidden;
   }
   header nav {
     display: -webkit-box;
