--- a/style.scss
+++ b/style.scss
@@ -674,10 +674,9 @@ footer{
 // ---------- MEdiasQueries----------
 //--mobile--
 
-@media (max-width: 481px) {
+@media only screen and (max-width: 481px)  {
     html{
         font-size:45%;
-        overflow-x: hidden;
     }
     header{
         
