--- a/css/style.css
+++ b/css/style.css
@@ -969,6 +969,110 @@ footer p a {
     -webkit-transform: scale(1.1);
             transform: scale(1.1);
   }
+  .bar_search {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 5rem;
+    padding: 1rem;
+    background-color: var(--secondary-color);
+    z-index: 21;
+    -webkit-transition: all 1s;
+    transition: all 1s;
+  }
+  .bar_search input {
+    width: 95%;
+    height: 100%;
+    border-radius: .5rem;
+  }
+  .bar_search input[placeholder] {
+    padding-left: 45%;
+  }
+  .bar_search i {
+    padding-left: 1rem;
+    cursor: pointer;
+  }
+  .bar_search i:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  .bar_search.active {
+    top: 6%;
+  }
+  .login_user {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    top: -100%;
+    left: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.575);
+    z-index: 200;
+    -webkit-transition: all 1s;
+    transition: all 1s;
+  }
+  .login_user form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 1.5rem;
+    width: 51rem;
+    height: 35rem;
+    background-color: var(--white);
+    font-size: var(--FontSize-m);
+    text-align: start;
+    border-radius: 1rem;
+  }
+  .login_user form h3 {
+    text-align: center;
+    font-size: var(--FontSize-xl);
+  }
+  .login_user form input[type='email'],
+  .login_user form input[type='password'],
+  .login_user form input[type='submit'] {
+    width: 90%;
+    padding: 1rem;
+    margin: 1rem;
+  }
+  .login_user form input[type='submit'] {
+    background-color: var(--secondary-color);
+    color: var(--white);
+    font-size: var(--FontSize-l);
+    border-radius: 1rem;
+    border: none;
+    cursor: pointer;
+  }
+  .login_user form input[type='submit']:hover {
+    background-color: rgba(242, 160, 84, 0.308);
+  }
+  .login_user.active {
+    top: 5%;
+  }
   .home video {
     width: 100%;
     top: -10rem;
