--- a/style.scss
+++ b/style.scss
@@ -727,6 +727,93 @@ footer{
         }
     }//-- end Header --
 
+    .bar_search{
+        display: flex;
+        align-items: center;
+        position: absolute;
+        top:0%; left: 0%;
+        width: 100%;
+        height: 5rem;
+        padding: 1rem;
+        background-color: var(--secondary-color);
+        z-index: 21;
+        transition: all 1s;
+    
+        & input{
+            width: 95%;
+            height: 100%;
+            border-radius: .5rem;
+            &[placeholder]{
+                padding-left: 45%;
+            }
+        }
+        & i{
+            padding-left: 1rem;
+            cursor: pointer;
+        }
+        & i:hover{
+            transform: scale(1.1);
+        }
+    
+        &.active{
+            top: 6%;
+        }
+    
+    }//-- end bar-search --
+    
+    .login_user{
+        display: flex;
+        position: absolute;
+        top: -100%;left: 0;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+        background-color:rgba(0, 0, 0, 0.575);
+        z-index: 200;
+        transition: all 1s;
+        & form{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 1.5rem;
+            width: 51rem;
+            height: 35rem;
+            background-color: var(--white);
+            font-size: var(--FontSize-m);
+            text-align: start;
+            border-radius: 1rem;
+            & h3{
+                text-align: center;
+                font-size: var(--FontSize-xl);
+            }
+            & input[type='email'],
+            input[type='password'],
+            input[type='submit']
+            {
+                width: 90%;
+                padding: 1rem;
+                margin: 1rem;
+            }
+            & input[type='submit']{
+                background-color: var(--secondary-color);
+                color: var(--white);
+                font-size: var(--FontSize-l);
+                border-radius: 1rem;
+                border: none;
+                cursor: pointer;
+            }
+            & input[type='submit']:hover{
+                background-color:rgba(242, 160, 84, 0.308);
+            }
+    
+        }
+        &.active{
+            top:5%
+        }
+    }//-- end Login_user --
+
     .home{
         & video{
             width: 100%;
